# nivra-browser

./: .cron.yml  .gitignore  .mcp.json  AGENTS.md  CLOBBER  CMakeLists.txt  Cargo.toml  LICENSE  README.md  client.py  mots.yaml
.cargo/: config.toml.in
.claude/: settings.json
.claude/skills/: README.md
.codex/: config.toml
.github/workflows/: pr-handler.yml
accessible/atk/: DOMtoATK.cpp  DOMtoATK.h
accessible/base/: CacheConstants.h  TextLeafRange.cpp  nsAccUtils.cpp  nsAccessibilityService.cpp  nsCoreUtils.cpp
accessible/generic/: DocAccessible-inl.h  DocAccessible.cpp  LocalAccessible.cpp
accessible/html/: HTMLSelectAccessible.cpp  HTMLSelectAccessible.h
accessible/ipc/: DocAccessibleParent.cpp  IPCTypes.h  (+2 more)
caps/: OriginAttributes.cpp
chrome/: RegistryMessageUtils.h
docs/: conf.py  config.yml
dom/: moz.build
gradle/: libs.versions.toml
image/: CopyOnWrite.h  ImageBlocker.cpp  ProgressTracker.cpp  ProgressTracker.h  RasterImage.cpp  SurfaceCache.cpp
js/: AGENTS.md
mfbt/: Array.h  CompactPair.h  DefineEnum.h  FunctionRef.h  HashFunctions.h  Maybe.h  RandomNum.cpp  Utf16.h  Utf8.cpp  Utf8.h  api.yml  moz.build
netwerk/: metrics.yaml
security/: moz.build
src/: main.cpp
storage/: mozStorageAsyncStatementExecution.cpp  mozStoragePrivateHelpers.cpp
supply-chain/: audits.toml  config.toml
taskcluster/: requirements.in  requirements.txt
testing/: testsuite-targets.mk
toolkit/: moz.configure
widget/: IMEData.cpp  InputData.cpp  TextEventDispatcher.cpp  WidgetEventImpl.cpp  nsGUIEventIPC.h  nsIWidget.cpp  nsIWinTaskbar.idl
(+3627 files in other folders)
